# init-hardware

./: .gitignore  CMakeLists.txt  README.md
app/include/: init-hardware.h
app/src/: init-hardware.c
